# interview

./: .gitignore  .resume-2024-10-14.pdf.md5  .resume-2024-12-02-v2.pdf.md5  .resume-2024-12-02.pdf.md5  .resume-2024-12-05-v2-white.pdf.md5  .resume-2024-12-05-v3-white.pdf.md5  .resume-2025-01-06.pdf.md5  .resume-2025-01-08-internal.pdf.md5  .resume-2025-02-10.pdf.md5  .resume-en.pdf.md5  QA.md  README.md  performance-tuning-roadmap.md  resume-2026-0607-v2.md  resume-en.md  resume-new.md  resume.md  review.md  self-introduction.md  skills-lock.json  test.md  分布式.md  面向面试.md
DB/: 数据库选型.md
MQ/: 消息堆积.md  消息幂等.md  (+1 more)
ai/agent-loop-lab/: .env.example  README.md  pyproject.toml
ai/agent-loop-lab/notes/: 01-loop-vs-langgraph.md  run-log.md
ai/agent-loop-lab/src/agent_loop/: config.py  loop.py  main.py  mcp_client.py  mcp_server.py  otel.py  tools.py
ai/agent-loop-lab/tests/: conftest.py  fakes.py  test_config.py  test_loop.py  test_mcp.py  test_otel.py  test_tools.py
ai/langchain/mvp-agentic-rag/: .env.example  Dockerfile  Makefile  README.md  docker-compose.langfuse.yml  docker-compose.yml  langgraph.json  pyproject.toml
ai/langchain/mvp-agentic-rag/docs/: ARCHITECTURE.md  PROJECT-NARRATIVE.md  debugging-playbook.md  runlog-2026-06-first-real-run.md
ai/langchain/mvp-agentic-rag/docs/interview-qa/: 01-retrieval.md  02-agent-graph.md  03-observability.md  04-eval.md  05-resilience-production.md
ai/langchain/mvp-agentic-rag/eval/golden/: cases.jsonl
ai/langchain/mvp-agentic-rag/sample_docs/: docker.md  kubernetes.md  postgres.md  redis.md
ai/langchain/mvp-agentic-rag/src/mvp_agentic_rag/: __init__.py  lg_entry.py  main.py
ai/langchain/mvp-agentic-rag/src/mvp_agentic_rag/agent/: components.py  factory.py  graph.py  human_review.py  state.py  supervisor.py  tools.py
ai/langchain/mvp-agentic-rag/src/mvp_agentic_rag/api/: app.py  deps.py  schemas.py
ai/langchain/mvp-agentic-rag/src/mvp_agentic_rag/core/: config.py  db.py  llm.py  resilience.py
ai/langchain/mvp-agentic-rag/src/mvp_agentic_rag/eval/: checks.py  cli.py  dataset.py  ragas_eval.py  report.py  runner.py
ai/langchain/mvp-agentic-rag/src/mvp_agentic_rag/ingest/: cli.py  loader.py  pipeline.py  splitter.py
ai/langchain/mvp-agentic-rag/src/mvp_agentic_rag/obs/: backends.py  callbacks.py  metrics.py  otel.py
ai/langchain/mvp-agentic-rag/tests/: conftest.py  fakes.py  test_agent_state.py  test_api_chat.py  test_api_health.py  test_api_schemas.py  test_api_stream.py  test_api_threads.py  test_chat_model.py  test_components.py  test_config.py  test_db.py  test_dense.py  test_eval_checks.py  test_eval_dataset.py  test_eval_report.py  test_eval_runner.py  test_fusion.py  test_graph.py  test_hitl.py  test_hybrid.py  test_ingest.py  test_kb_rag.py  test_metrics_callback.py  test_obs_backends.py  test_obs_otel.py  test_postgres_checkpoint.py  test_rerank.py  test_resilience.py  test_sparse.py  test_splitter.py  test_supervisor.py  test_tools.py  test_web_agent.py
ai/langchain/notes-verify/: .env.example  README.md  conftest.py  pyproject.toml
ai/langchain/notes-verify/tests/: test_01_learning_path.py  test_02_chat_models.py  test_03_prompt_templates.py  test_04_output_parsers.py  test_05_lcel.py  test_06_tool_calling.py  test_07_agents.py  test_08_rag.py  test_09_langgraph_core.py  test_10_langgraph_advanced.py  test_11_production.py  test_12_multi_agent.py
ai/ml-labs/: .gitignore  README.md  pyproject.toml
ai/ml-labs/interview/a3-house-price/: README.md  conftest.py  dataio.py  leakage.py  metrics.py  model.py  prepare_data.py  train.py
ai/ml-labs/interview/a3-house-price/outputs/: metrics.md
ai/ml-labs/interview/a3-house-price/tests/: test_dataio.py  test_leakage.py  test_metrics.py  test_model.py
ai/ml-labs/robotics/: README.md
(+1717 files in other folders)
