[project]
name = "agent-loop-lab"
version = "0.1.0"
description = "裸循环 agent 实验:不用框架手写 agent loop + MCP 工具 + OTel 手动埋点"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "mcp>=1.0",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_loop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
