[project]
name = "mvp-agentic-rag"
version = "0.1.0"
description = "企业知识库 Agentic RAG 助手(LangGraph 生产级 MVP)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3.6",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-text-splitters>=0.3",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "prometheus-client>=0.25.0",
    "langfuse>=4.7.1",
    "httpx>=0.28.1",
    "langchain>=1.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "testcontainers[postgres]>=4.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mvp_agentic_rag"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
asyncio_mode = "auto"
testpaths = ["tests"]
