[project]
name = "langchain-notes-verify"
version = "0.1.0"
description = "可执行校验套件:把 ai/langchain/ 各章笔记的关键声称变成通过的 pytest 断言"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain>=1.3.4",
    "langchain-community>=0.3",
    "langgraph>=1.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: 需要真实 OPENAI_API_KEY 的测试,默认无 key 时自动 skip",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 纯测试项目,无源码包;给 hatchling 一个空 force-include 避免它找包失败
bypass-selection = true
